Fixed to work in OpenJDK 18